--- a/pages/cat.Imagery/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Imagery/Disposable-Camera-Filter/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>Disposable Night</title>
+  <title>Disposable Camera Filter</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -21,6 +21,9 @@
   <div id="toast" class="toast hidden"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.6/dist/umd/ffmpeg.min.js"></script>
+  <script type="module" src="ui.js"></script>
+  <script type="module" src="media.js"></script>
+  <script type="module" src="export.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
